# ritoskin

./: .gitignore  CONTRIBUTING.md  README.md
src/: readme.md
src/dev/: ritoskin_extractor.cpp  ritoskin_extractor.h  ritoskin_gui.py  ritoskin_sync_hashes.py  ritoskin_wad_packer.cpp
src/dev/old_version/: ritoskin_extractor.cpp  update_ritoskin_extractor.bat
src/dev/ritoskin/: CMakeLists.txt  readme.md
src/dev/ritoskin/ritobin_lib/: CMakeLists.txt
src/dev/ritoskin/ritoskin/: CMakeLists.txt
src/dev/ritoskin/ritoskin/src/: ThreadPool.cpp  ThreadPool.h  main.cpp
src/docs/: dev-note.md  ritoskin_gui_readme.md  ritoskin_wad_packer.md
src/include/: ritoskin_extractor.h
src/resources/: receive_champion_data.py  scrap_tex_to_dds.py
src/resources/toilet_py_code/: index_output_ids.py  move_dependencies.py
src/ritoskin_extractor/: compress_files.py  download_hashes.py  improved_index.py  index_names.py  index_output_names.py  indexer.py  readme.md  update_ritoskin_extractor.bat
src/ritoskin_extractor/process_champions/: placeholder.txt
src/ritoskin_gui/: readme.md  ritoskin_gui.py
src/scripts/: receive_champion_data.py  receive_ritobin.py  update_ritobin.py
src/scripts/toilet_py_code/: compress_files.py  exe_wad_helper.py
src/src/: ritoskin.cpp  ritoskin_extractor.cpp  ritoskin_gui.cpp  ritoskin_wad_packer.cpp
